# AWR6xxx_Toolchain

./: LICENSE  README.md
cmake/: R4F-toolchain.cmake
example/Barebones_MSS/: CMakeLists.txt
example/Barebones_MSS/include/: AWR6843.h
example/Barebones_MSS/src/: main.c
example/TI_RTOS_MSS/: CMakeLists.txt  mss_rtos.cfg
example/TI_RTOS_MSS/src/: .gitignore  main.c
